--- a/pom.xml
+++ b/pom.xml
@@ -79,14 +79,14 @@
   </parent>
   <groupId>org.jahia.modules</groupId>
   <artifactId>wernertestmodul</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>wernertestmodul</name>
   <description>This is the custom module (wernertestmodul) for running on a Digital Factory server.</description>
   <scm>
     <connection>scm:git:git@github.com:wassek/wernertestmodule.git</connection>
     <developerConnection>scm:git:git@github.com:wassek/wernertestmodule.git</developerConnection>
-    <tag>1_0</tag>
+    <tag>HEAD</tag>
   </scm>
   <repositories>
     <repository>
